# qml_player

./: .clang-format  .gitignore  .qmlls.ini  CMakeLists.txt  PlayerController.cpp  README.md  compile_commands.json  main.cpp  resources.qrc  test.qml
.cache/clangd/index/: AudioInfoBox_qml.cpp.AC2872626771180A.idx  Main_qml.cpp.0DC106978403445D.idx  PlayerController.h.45E37120C85DC91B.idx  appmedia_player_qmlcache_loader.cpp.C6A5C3615060C08A.idx  appmedia_player_qmltyperegistrations.cpp.8FAE5B5606842030.idx  main.cpp.0060D7C6B1502819.idx  mocs_compilation.cpp.0D00FD3D4E6A8B17.idx  qrc_appmedia_player_raw_qml_0.cpp.DCFA71226F4BDB92.idx  qrc_qmake_media_player.cpp.5695DD9CF248CA40.idx
include/: AudioInfo.h  PlayerController.h
qml/: AudioInfoBox.qml  ImageButton.qml  Main.qml  TextButton.qml
src/: AudioInfo.cpp  PlayerController.cpp
